--- a/project/.settings/org.eclipse.core.resources.prefs
+++ b/project/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//WebContent/css/common.css=UTF-8
 encoding//WebContent/css/shape.css=UTF-8
+encoding//WebContent/subpage/css/boardcommon.css=UTF-8
 encoding//src/action/MovieRegistAction.java=UTF-8
 encoding/<project>=UTF-8
